--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [twitter]
 
-api_key = gXF2xIi9k5PixyxLtgBVQOZPx
+api_key = 
 
-api_key_secret = 6ZvLNMCv6EzEXJenRjdcPDX4BbcnuIk0SKV2VbV6ofeIVQ4JI9
+api_key_secret = 
 
-access_token = 762726039193788416-AE8JjbcU4ys4DQkcDJX3td1oa95h0P4
+access_token = 
 
-access_token_secret = LUi9LvO1bo6wul0qlKbufJTiroz6ox6pJCrI9O9WrcbO4
+access_token_secret = 
